--- a/index.html
+++ b/index.html
@@ -770,6 +770,7 @@
         }
     </style>
 </head>
+<script src="https://cdn.jsdelivr.net/npm/iframe-resizer@4.3.10/js/iframeResizer.contentWindow.min.js"></script>
 <body>
     <div class="container">
         <header>
