Fix width for mobile

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         }
 
         .container {
+            width: 100%;
             max-width: 1400px;
             margin: 0 auto;
             padding: 24px;
@@ -815,7 +816,7 @@
                 </div>
                 <div class="slider-container">
                     <div class="comparison-markers" id="electric-markers"></div>
-                    <input type="range" class="slider" id="electric-slider" min="50" max="450" step="5" value="120">
+                    <input type="range" class="slider" id="electric-slider" min="50" max="500" step="5" value="120">
                 </div>
                 <div class="slider-value" id="electric-value"></div>
             </div>
