--- a/index.html
+++ b/index.html
@@ -1242,7 +1242,8 @@
         </header>
 
         <div class="sticky-share">
-            <h3 style="text-align: center; margin-bottom: 16px; font-size: 18px; font-weight: 700; color: var(--text-primary);">Share of Local Resources & Economy</h3>
+            <h3 style="text-align: center; margin-bottom: 8px; font-size: 18px; font-weight: 700; color: var(--text-primary);">Share of Local Resources & Economy</h3>
+            <p style="text-align: center; margin-bottom: 16px; font-size: 16px; color: var(--text-secondary);"><strong style="color: var(--accent-water);">Adjust sliders below to update</strong></p>
             <div class="share-row">
                 <div class="share-metric">
                     <div class="share-metric-label">Water Supply</div>
@@ -1257,6 +1258,12 @@
                     <div class="share-metric-value" id="sticky-economy" style="color: var(--accent-economy);">0.00%</div>
                 </div>
             </div>
+        </div>
+
+        <div style="background: var(--bg-card); border-radius: 12px; padding: 20px; margin: 24px 0; border: 1px solid var(--border); box-shadow: var(--shadow-sm);">
+            <p style="font-size: 14px; color: var(--text-secondary); line-height: 1.6; margin: 0; text-align: center;">
+                <strong style="color: var(--text-primary);">Many details about Project Blue are unknown.</strong> <strong style="color: var(--accent-water);">Drag the sliders below</strong> to see how different possibilities could change the ultimate impact on Tucson's resources and economy. Click on the labeled reference points for some of the possibilities based on Project Blue's claims and other industry data.
+            </p>
         </div>
 
         <div class="main-grid">
