Change "Project Blue's Claim" 3 line label to "Developer Claim" 2 line label. Fixed "updated" date.

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
             white-space: normal;
             line-height: 1.2;
             text-align: center;
-            width: 60px;
+            width: 70px;
         }
 
         .slider {
@@ -1485,7 +1485,7 @@
         <footer>
             Analysis by <a href="https://www.skyislandai.com/" target="_blank" style="font-size: 16px; font-weight: 600; color: #06b6d4;">Sky Island AI</a> •
             <a href="#" onclick="showMethodology(); return false;">Methodology & Data Sources</a> •
-            Updated December 2024
+            Updated July 2025
         </footer>
     </div>
 
@@ -1566,7 +1566,7 @@
             // Water comparisons (in MGD - Million Gallons per Day)
             comparisons: {
                 water: [
-                    { label: "Project Blue's Claim", value: -0.1, type: "developer",
+                    { label: "Developer Claim", value: -0.1, type: "developer",
                       tooltip: "Project Blue claims to be 'water positive', meaning it would return more water to the environment than it uses. However, they have not yet selected a specific method or water replenishment project." },
                     { label: "Google Mesa (min)", value: 1, type: "benchmark",
                       tooltip: "Guaranteed allowance at Google's Mesa campus",
@@ -1589,7 +1589,7 @@
                 construction: [
                     { label: "Low", value: 1000, type: "benchmark",
                       tooltip: "Small facility construction" },
-                    { label: "Project Blue's Claim", value: 1200, type: "developer",
+                    { label: "Developer Claim", value: 1200, type: "developer",
                       tooltip: "Developer claim: $1.2B construction investment" },
                     { label: "Typical", value: 2020, type: "median",
                       tooltip: "Industry typical for 2.25M sq ft" },
@@ -1600,13 +1600,13 @@
                     { label: "Min", value: 500, type: "benchmark" },
                     { label: "Typical", value: 1000, type: "median" },
                     { label: "High", value: 2000, type: "benchmark" },
-                    { label: "Project Blue's Claim", value: 2400, type: "developer",
+                    { label: "Developer Claim", value: 2400, type: "developer",
                       tooltip: "Developer claim: $2.4B equipment over 3 years" }
                 ],
                 economic: [
                     { label: "Min", value: 45, type: "benchmark",
                       tooltip: "Contractual minimum: 75 jobs @ $75k. Economic multiplier: 1.4x" },
-                    { label: "Project Blue's Claim", value: 60, type: "developer",
+                    { label: "Developer Claim", value: 60, type: "developer",
                       tooltip: "Developer claim: 180 jobs @ $64k average" },
                     { label: "High", value: 85, type: "benchmark",
                       tooltip: "Best case scenario. Economic multiplier: 2.4x" }
