Make sticky panel prettier

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         }
 
         .share-metric-label {
-            font-size: 11px;
+            font-size: 14px;
             color: var(--text-muted);
             margin-bottom: 4px;
             text-transform: uppercase;
@@ -1262,16 +1262,16 @@
             <p style="text-align: center; margin-bottom: 16px; font-size: 16px; color: var(--text-secondary);"><strong style="color: var(--accent-water);">Adjust sliders below to update</strong></p>
             <div class="share-row">
                 <div class="share-metric">
-                    <div class="share-metric-label">Water Supply</div>
-                    <div class="share-metric-value" id="sticky-water" style="color: var(--accent-water);">0.00%</div>
+                    <div class="share-metric-label">% of Water Supply</div>
+                    <div class="share-metric-value" id="sticky-water" style="color: var(--accent-water);">💧 0.00%</div>
                 </div>
                 <div class="share-metric">
-                    <div class="share-metric-label">Electric Supply</div>
-                    <div class="share-metric-value" id="sticky-electric" style="color: var(--accent-electric);">0.00%</div>
+                    <div class="share-metric-label">% of Electric Supply</div>
+                    <div class="share-metric-value" id="sticky-electric" style="color: var(--accent-electric);">⚡️ 0.00%</div>
                 </div>
                 <div class="share-metric">
-                    <div class="share-metric-label">Annual Ongoing Economic Activity</div>
-                    <div class="share-metric-value" id="sticky-economy" style="color: var(--accent-economy);">0.00%</div>
+                    <div class="share-metric-label">% of Economic Activity</div>
+                    <div class="share-metric-value" id="sticky-economy" style="color: var(--accent-economy);">💰 0.00%</div>
                 </div>
             </div>
         </div>
@@ -1308,7 +1308,7 @@
             <div class="slider-section">
                 <div class="slider-header">
                     <div class="slider-title" data-tooltip="Continuous power draw. Data centers run 24/7/365 at high capacity factors (90%+)">
-                        <span class="icon">⚡</span>
+                        <span class="icon">⚡️</span>
                         <h2>ELECTRIC USE</h2>
                     </div>
                     <div class="consumption-badge" id="electric-badge" data-tooltip="Percentage of TEP's total annual generation (9.21 TWh)">0% of TEP Supply</div>
@@ -2075,9 +2075,9 @@
            
             // Update sticky values at top
             document.getElementById('sticky-water').textContent =
-                (waterPercent < 0 ? '-' : '') + Math.abs(waterPercent).toFixed(2) + '%';
-            document.getElementById('sticky-electric').textContent = electricPercent.toFixed(2) + '%';
-            document.getElementById('sticky-economy').textContent = economyPercent.toFixed(3) + '%';
+                '💧 ' + (waterPercent < 0 ? '-' : '') + Math.abs(waterPercent).toFixed(2) + '%';
+            document.getElementById('sticky-electric').textContent = '⚡️️ ' + electricPercent.toFixed(2) + '%';
+            document.getElementById('sticky-economy').textContent = '💰 ' + economyPercent.toFixed(3) + '%';
            
             // Water share - scale to 50% max
             document.getElementById('share-water-percent').textContent =
