Tooltips are semitransparent

--- a/index.html
+++ b/index.html
@@ -634,7 +634,8 @@
 
         .tooltip {
             position: fixed;
-            background: var(--bg-primary);
+            /* Slightly transparent background so it doesn't fully block content */
+            background: rgba(15, 23, 42, 0.8);
             color: var(--text-primary);
             padding: 12px;
             border-radius: 8px;
