--- a/index.html
+++ b/index.html
@@ -1282,8 +1282,8 @@
             outline-offset: 4px;
         }
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/iframe-resizer@5.4.6/js/iframeResizer.contentWindow.min.js"></script>
 </head>
+<script src="https://cdn.jsdelivr.net/npm/@iframe-resizer/child@5.4.6/index.umd.js" async></script>
 <body>
     <div class="loading-overlay" id="loading">
         <div class="loading-spinner"></div>
