--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
             font-size: 20px;
             font-weight: 700;
             font-family: 'JetBrains Mono', monospace;
-            cursor: help;
+            cursor: default;
             transition: transform var(--transition-fast);
         }
 
